--- a/src/IceSkool.Web.Host/package.json
+++ b/src/IceSkool.Web.Host/package.json
@@ -33,6 +33,7 @@
     "@types/toastr": "^2.1.33",
     "abp-ng2-module": "^3.2.2",
     "abp-web-resources": "^3.8.2",
+    "angular-froala-wysiwyg": "^2.9.1-1",
     "animate.css": "^3.5.2",
     "block-ui": "^2.70.1",
     "bootstrap": "^3.3.7",
