--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,8 +33,11 @@ steps:
 - task: CopyFiles@2
   displayName: Copy Files
   inputs:
-    contents: _buildOutput\**
-    targetFolder: $(Build.ArtifactStagingDirectory)
+    SourceFolder: '$(Build.SourcesDirectory)'
+    Contents: |
+     **/*
+     !.git/**/*
+    TargetFolder: $(Build.ArtifactStagingDirectory)
 
 - task: PublishBuildArtifacts@1
   displayName: Publish Build Artifacts
