--- a/src/IceSkool.Web.Host/package.json
+++ b/src/IceSkool.Web.Host/package.json
@@ -5,6 +5,7 @@
   "angular-cli": {},
   "scripts": {
     "ng": "ng",
+    "build": "ng build",
     "start": "ng serve --host 0.0.0.0 --port 4200",
     "hmr": "ng serve --host 0.0.0.0 --port 4200 --hmr",
     "test": "ng test",
