--- a/src/IceSkool.Web.Host/package.json
+++ b/src/IceSkool.Web.Host/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "ng": "ng",
     "build": "ng build",
+    "build-prod": "ng build --prod",
     "start": "ng serve --host 0.0.0.0 --port 4200",
     "hmr": "ng serve --host 0.0.0.0 --port 4200 --hmr",
     "test": "ng test",
